Description : modification home list layout Bug ID: NA Reviewed By: Sanjay

--- a/technical/src/apps/user/patientcare/src/app.css
+++ b/technical/src/apps/user/patientcare/src/app.css
@@ -161,7 +161,7 @@ TextField {
   color:white;
 }
 .listicon{
-  font-size: 24;
+  font-size: 20;
   color: #396767;
   margin-right: 10px;
 }
@@ -206,6 +206,7 @@ TextField {
 Label {
   font-family: 'Open Sans';
   font-weight: 300;
+  /* font-size: 14; */
    /* Regular Open Sans */
  }
  
@@ -214,7 +215,9 @@ Label {
    /* Light Open Sans */
  }
  
- Label.mod-bold {
-  font-family: 500; 
+.label-small {
+  font-family: 'Open Sans';
+  font-size: 13;
+  color: rgb(82, 81, 81);
    /* Bold Open Sans */
  }
