--- a/technical/src/apps/user/patientcare/src/app/home/home.component.css
+++ b/technical/src/apps/user/patientcare/src/app/home/home.component.css
@@ -1,4 +1,3 @@
-.list {}
 
 .home-panel {
     vertical-align: center;
@@ -53,21 +52,6 @@ TextField {
 }
 
 /* header end */
-
-.card {
-    /* background-color: #fff; */
-    /* color: #4d4d4d; */
-    /* margin: 15 15 0;
-    border: 1px;
-    border-color: gray;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s; */
-    /* padding: 10;
-    border-width: 2;
-    border-color: slategray;
-    border-radius: 10 !important;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);   */
-}
 
 /* 
 .card-layout {
@@ -187,6 +171,6 @@ TextField {
 }
 
 .list-layout {
-    padding: 15% 7px;
+    padding: 10% 7px;
     /* vertical-align: center; */
 }
